# jsonrpc4c

./: .gitignore  CMakeLists.txt  README.md  main.cpp  server.cpp  server.h
include/jsonrpc4c/: client.h  discovery.h  properties.h  server.h  string.h  tcp-client-pool.h  tcp-client.h  tcp-server.h
server/: tcp.cpp  tcp.h
src/: main.cc  main.h
src/client/: tcp-client-pool.cc  tcp-client.cc  tcp-client.h
src/server/: server.h  tcp-server.cc  tcp-server.h
test/: CMakeLists.txt  boost_test.cc  tcp_test.cc  tcpserver_test.cc
